--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foundry-mcp",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple, lightweight and fast MCP (Model Context Protocol) server for Foundry (Solidity/EVM).",
   "module": "src/index.ts",
   "type": "module",
@@ -27,7 +27,8 @@
     "server"
   ],
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^20.17.30"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
